# ComfyUI_rgbx_Wrapper

./: README.md  __init__.py  download_model.bat  pyproject.toml  requirements.txt  rgbx.py
.github/workflows/: publish.yml
x2rgb/: pipeline_x2rgb.py
x2rgb_inpainting/: gradio_demo_x2rgb_inpainting.py  pipeline_x2rgb_inpainting.py
